# Litex-CNC-toolerator

./: .readthedocs.yaml  CHANGELOG.rst  README.rst  pyproject.toml
.devcontainer/: docker-compose.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: python-publish.yml
docs/src/: index.rst  readme.rst
example/: 5a-75e_v6.0_toolerator.json
src/litexcnc_toolerator/config/: __init__.py  stepgen.py  toolerator.py
src/litexcnc_toolerator/driver/: __init__.py  litexcnc_toolerator.c  litexcnc_toolerator.h
src/litexcnc_toolerator/firmware/: __init__.py  stepgen.py  toolerator.py
